--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="container">
     <div class="top-container"container></div>
     <div class="bottom-container">
-      <div><img alt="NicePage.com" src="./images/coffee.png"></div>
+      <div><img alt="NicePage.com" src="image.png"></div>
       <div class="text-container">
         <h1>Certified Coffee Courses</h1>
         <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore
